# calypso-simulator

./: README.md
auv_control/: CMakeLists.txt  package.xml
auv_control/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
auv_control/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
auv_control/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
auv_control/src/: teleop.cpp
calypso_imu/: CMakeLists.txt  package.xml
calypso_imu/arduino codes/imu_raw/: imu_raw.ino
calypso_imu/arduino codes/imu_temp/: imu_temp.ino
calypso_imu/csv_files/: .~lock.imu_test.csv#  02_10_2023__01_34:46imu_test.csv  02_10_2023__03_18:23_imu_test_agm.csv  02_10_2023__03_20:54_imu_test_agm.csv  02_10_2023__03_24:19_imu_test_agm.csv  02_10_2023__03_26:49_imu_test_agm.csv  02_10_2023__03_27:39_imu_test_agm.csv  imu_test.csv
calypso_imu/msg/: buoy_imu.msg
calypso_imu/src/: imu_2_csv.py  imu_2_csv2.py
calypso_msgs/: CMakeLists.txt  package.xml
calypso_msgs/msg/: buoy.msg  dolphins.msg  gypseas.msg
calypso_pid/: CMakeLists.txt  package.xml
calypso_pid/launch/: calypso_pid_test.launch
calypso_pid/src/: pid.py
calypso_pid_beta/: CMakeLists.txt  package.xml  setup.py
calypso_pid_beta/launch/: pid.launch
calypso_pid_beta/scripts/: pid_dolphins.py  pid_gypseas.py  pid_heading.py
calypso_pid_beta/scripts/pid_calypso/: __init__.py  pid_lib.py
calypso_pose_estimator/: CMakeLists.txt  package.xml
calypso_pose_estimator/launch/: pose_estimator.launch
calypso_pose_estimator/scripts/: pose.py
calypso_sim/: CMakeLists.txt  package.xml
calypso_sim/config/: controllers.yaml  urdf.rviz
calypso_sim/launch/: blue.launch  controllers.launch  herkules.launch  ocean.launch  rosetta.launch  rviz.launch  sim.launch  spawn.launch
calypso_sim/meshes/auv-body/: AUV.STL  auv.STL  sim_assembly.STL
calypso_sim/meshes/thrusters/T200_Thruster_CCW/: model.config  model.sdf
calypso_sim/meshes/thrusters/T200_Thruster_CCW/meshes/: T200_Prop_CCW.dae
calypso_sim/meshes/thrusters/T200_Thruster_CW/: model.sdf
calypso_sim/meshes/thrusters/T200_Thruster_CW/meshes/: T200_Prop_CW.dae  T200_Prop_CW.stl
calypso_sim/model/: auv.urdf.xacro  camera.urdf.xacro  chasis.urdf.xacro  imu.urdf.xacro  thrusters.urdf.xacro
calypso_sim/src/: fluid_resistance.cc
calypso_sim/urdf/: auv.urdf.xacro  camera2d.urdf.xacro  camera_depth.urdf.xacro  imu.urdf.xacro
calypso_sim/worlds/: blue.world  boat.world  herkules_world.world
calypso_thruster/: CMakeLists.txt  package.xml
calypso_thruster/include/: ThrusterPlugin.hh  ThrusterROSPlugin.hh
calypso_thruster/msgs/: Double.proto
calypso_thruster/src/: Dynamics.cc  ThrusterConversionFcn.cc  ThrusterConversionFcn_TEST.cc  ThrusterDynamics_TEST.cc  ThrusterPlugin.cc  ThrusterROSPlugin.cc
calypso_thruster/srv/: GetThrusterConversionFcn.srv
my_robot_urdf/: CMakeLists.txt  gazebo.sh
my_robot_urdf/launch/: blue.launch  herkules.launch  ocean.launch  rviz.launch  sim.launch  teleop.launch
my_robot_urdf/meshes/: inertia.py
my_robot_urdf/meshes/thrusters/: README.md
my_robot_urdf/meshes/thrusters/T200_Thruster_CCW/meshes/: T200_Prop_CCW.stl
my_robot_urdf/meshes/thrusters/T200_Thruster_CW/: model.config
my_robot_urdf/meshes/thrusters/T200_Thruster_CW/meshes/: T200_Thruster.dae
my_robot_urdf/model/: Sphere.sdf  auv.urdf.xacro  camera.urdf.xacro  imu.urdf.xacro  thrusters.urdf.xacro
my_robot_urdf/worlds/: blue.world  empty_world.world
pickle/: RPMvsPWM.csv  coeffs.pickle
rosetta/: CMakeLists.txt  package.xml
rosetta/devel/.private/catkin_tools_prebuild/: local_setup.sh
rosetta/launch/: rosetta.launch
rosetta/src/: eqtest.py  equation.py  imu.py  rosetta.py  thruster.py  thruster_test.py  translator.cpp
rosetta/src/pickle/: coeffs_rpwVSpwm.py
simulation-gazebo_thruster/: CMakeLists.txt  manifest.xml
simulation-gazebo_thruster/src/: CMakeLists.txt  GazeboThruster.cpp  GazeboThruster.hpp  msgs.proto
simulation-gazebo_underwater/: .gitignore  CMakeLists.txt  README.md  manifest.xml
simulation-gazebo_underwater/src/: CMakeLists.txt  DataTypes.hpp  Gazebo7Shims.hpp  GazeboUnderwater.cpp  GazeboUnderwater.hpp  uw_msgs.proto
thruster/: CMakeLists.txt  package.xml
thruster/arduino_code/: thruster_temp.ino
thruster/src/: publisher.py
translation_layer/: CMakeLists.txt  package.xml
translation_layer/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall
translation_layer/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
translation_layer/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
translation_layer/src/: converter.py
